# src/auth/dto/login.input.ts
@@ -1,0 +1,17 @@
+import { Field, InputType } from '@nestjs/graphql'
+import { ApiProperty } from '@nestjs/swagger'
+import { IsEmail, IsString, MinLength } from 'class-validator'
+
+@InputType()
+export class LoginInput {
+  @ApiProperty({ example: 'admin@example.com' })
+  @Field()
+  @IsEmail()
+  email: string
+
+  @ApiProperty({ example: 'secret123' })
+  @Field()
+  @IsString()
+  @MinLength(6)
+  password: string
+}
