# src/auth/dto/validate-token.input.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger'
+import { IsString } from 'class-validator'
+
+export class ValidateTokenInput {
+  @ApiProperty()
+  @IsString()
+  token: string
+}
